making better debugging and killing random warnings without debug ode